# traces

./: .gitignore  Makefile  Makefile.am  README  ccwrap.py  configure.ac  libtool
interactive_reader/: Makefile  Makefile.am  configure.ac
libtrace/: Makefile.am  configure.ac
trace_dumper/: Makefile.am  configure.ac
trace_instrumentor/: Makefile.am  TraceCall.h  trace_instrumentor.cpp
trace_reader/: Makefile.am  configure.ac  simple_trace_reader.c
